v2.3.5 (BETA)
----------------------------------------------------------------------------------------------------
 * Certain error codes reported by the ACME server that indicate a problem with the
   configured data now immediately switch to daily retries. For example: if the ACME
   server rejects a contact email or a domain name, frequent retries will most likely
   not solve the problem. But daily retries still make sense as there might be an
   error at the server and un-supervised certificate renewal is the goal. Refs #222.
 * The max delay for retries has been raised to daily (this is like all retries jittered
   somewhat to avoid repeats at fixed time of day).
 * No longer debug logging the ocsp renewal success with an error indicator. Fixes #197.
 * When handling ACME authorization resources, the module no longer requires the server
   to return a "Location" header, as was necessary in ACMEv1. Fixes #216.
 * Removed the "authz" subcommand from the a2md executable. This was a left over of ACMEv1.
 * The module now reuses the internal curl instance in each MDs interaction
   with the ACME server. This means that open connections are reused.

v2.3.4 (BETA)
----------------------------------------------------------------------------------------------------
 * Test case and work around for domain names > 64 octets. Fixes #227.
   When the first DNS name of an MD is longer than 63 octets, the certificate
   request will not contain a CN field, but leave it up to the CA to choose one.
   Currently, Lets Encrypt looks for a shorter name in the SAN list given and
   fails the request if none is found. But it is really up to the CA (and what
   browsers/libs accept here) and may change over the years. That is why
   the decision is best made at the CA.
 * Reverted setting the environment variables for MDMessageCmd and MDNotifyCmd. This
   prevented the inheritance of existing environment variables as there seems to be