@@ -111,9 +111,9 @@ static void process_drive_job(md_renew_ctx_t *dctx, md_job_t *job, apr_pool_t *p
         rv = md_event_raise("renewing", md->name, job, result, ptemp);
         if (APR_SUCCESS != rv) {
                 ap_log_error(APLOG_MARK, APLOG_INFO, 0, dctx->s, APLOGNO(10060)
-                             "%s: event-handler for 'renewing' event failed with code %d",
+                             "%s: event-handler for 'renewing' returned %d, preventing renewal to proceed.",
                              job->mdomain, rv);
-                goto expiry;
+                goto leave;
         }
 
         if (!md_reg_should_renew(dctx->mc->reg, md, dctx->p)) {
